--- a/coach.html
+++ b/coach.html
@@ -171,7 +171,7 @@
 					<h4 class="modal-title" id="myModalLabel"> Team Average Score</h4>
 				</div>
 				<div class="modal-body">
-					<h3 id="score"></h3>
+					<h1 id="score" class="label label-danger"></h1>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
