--- a/organization.html
+++ b/organization.html
@@ -92,6 +92,7 @@
 								<th>Name</th>
 								<th>Organization 	</th>
 								<th>--</th>
+								<th>--</th>
 							</tr>
 						</thead>
 						<tbody id="teamList">
@@ -119,6 +120,24 @@
 								</div>
 							</div>
 						</div>
+	</div>
+	
+		<div class="modal fade" id="scorePP" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					
+					<h4 class="modal-title" id="myModalLabel"> Team Average Score</h4>
+				</div>
+				<div class="modal-body">
+					<h1 id="score" class="label label-danger"></h1>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					
+				</div>
+			</div>
+		</div>
 	</div>
 			</div>
 		</div>
