--- a/judge.html
+++ b/judge.html
@@ -32,10 +32,12 @@
 
 		<div id="main">
 			<div class="container">
-				<button id="link-btn" onclick="switchView('history')"  class="btn btn-lg btn-primary  signup-btn"
-						type="button">Show History</button>
-						<button id="history-btn" onclick="switchView('links')" style="display:none;" class="btn btn-lg btn-primary  signup-btn"
-						type="button">Rate Links</button>
+				<button id="link-btn" onclick="switchView('history')"
+					class="btn btn-lg btn-primary  signup-btn" type="button">Show
+					History</button>
+				<button id="history-btn" onclick="switchView('links')"
+					style="display: none;" class="btn btn-lg btn-primary  signup-btn"
+					type="button">Rate Links</button>
 				<div class="row">
 
 					<div
@@ -77,17 +79,12 @@
 													<td>Role:</td>
 													<td id="role"></td>
 												</tr>
-												
-
 												<tr>
-
-
-
 												</tr>
 
 											</tbody>
 										</table>
-										
+
 
 									</div>
 								</div>
@@ -99,12 +96,10 @@
 				</div>
 			</div>
 			<div class="col-md-12">
-			<h2 class="page-header" id="links-title">Rate Videos</h2>
-				<div class="row" id="links">
-				</div>
-				<h2 class="page-header" id="history-title" style="display:none;">History</h2>
-				<div class="row" style="display:none;"  id="historyLinks">
-				</div>
+				<h2 class="page-header" id="links-title">Rate Videos</h2>
+				<div class="row" id="links"></div>
+				<h2 class="page-header" id="history-title" style="display: none;">History</h2>
+				<div class="row" style="display: none;" id="historyLinks"></div>
 			</div>
 
 		</div>
