--- a/coach.html
+++ b/coach.html
@@ -352,7 +352,12 @@
 			</div>
 		</div>
 	</div>
-
+<div class="panel panel-default">
+	<div class="panel-heading">Challenge</div>
+   		 <div class="panel-body" id="challenge-txt">
+   		 
+   		 </div>
+	</div>
 
 	<div id="footer"></div>
 
