--- a/judge.html
+++ b/judge.html
@@ -104,6 +104,13 @@
 
 		</div>
 	</div>
+	
+	<div class="panel panel-default">
+	<div class="panel-heading">Challenge</div>
+   		 <div class="panel-body" id="challenge-txt">
+   		 
+   		 </div>
+	</div>
 
 
 
