--- a/organization.html
+++ b/organization.html
@@ -178,7 +178,12 @@
 	</div>
 
 
-
+<div class="panel panel-default">
+	<div class="panel-heading">Challenge</div>
+   		 <div class="panel-body" id="challenge-txt">
+   		 
+   		 </div>
+	</div>
 
 	<div id="footer"></div>
 
