--- a/admin.html
+++ b/admin.html
@@ -53,10 +53,10 @@
 					data-target="#changeStatus"
 					class="btn btn-lg btn-primary  signup-btn" onclick="loadAllUser()" type="button">Change status
 				</button>
-				<button id="challengeText-btn"  data-toggle="modal"
+			<!-- 	<button id="challengeText-btn"  data-toggle="modal"
 					data-target="#challengeText"
 					class="btn btn-lg btn-primary  signup-btn" onclick="" type="button">Upload Challenge Text
-				</button>
+				</button> -->
 			
 
 			</div>
