--- a/admin.html
+++ b/admin.html
@@ -172,6 +172,10 @@
 						<div class="form-group ">
 							<input type="text" id="chalng-name"  /> 
 						</div>
+						<label for="name">Challenge text</label>
+						<div class="form-group ">
+							<input type="text" id="chalng-txt"  /> 
+						</div>
 						
 					<label for="name">Start Date</label>
 						<div class="form-group">
